html-full,css-footer:bug

--- a/projekt/index.html
+++ b/projekt/index.html
@@ -123,21 +123,70 @@
                         <div>
                             <p class="company">COMPANY</p>
                         </div>
-                        <img src="./img/projeco-logo.png" alt="">
-                        <div>
+                        <div class="logo_bottom">
+                            <img src="./img/projeco-logo.png" alt="">
+                        </div>
+                        <div class="text_text_box">
                             <p class="text_box_left">
                                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.
                             </p>
                         </div>
                     </div>
                     <div class="box_links">
-                        <p></p>
+                        <div class="bottom_links_text">
+                            <p class="links_bottom_text">links</p>
+                        </div>
+                        <div class="links_remember">
+                            <div class="links_five">
+                                <a href="#" class="box_link">home</a>
+                                <a href="#" class="box_link">about</a>
+                                <a href="#" class="box_link">services</a>
+                                <a href="#" class="box_link">projekts</a>
+                                <a href="#" class="box_link">contact us</a>
+                            </div>
+                            <div class="fuck">
+                                <a href="#" class="box_link">faq</a>
+                                <a href="#" class="box_link">terms</a>
+                                <a href="#" class="box_link">careers</a>
+                            </div>
+                            <div class="wlog">
+                                <a href="#" class="box_link">blog</a>
+                                <a href="#" class="box_link">partners</a>
+                                <a href="#" class="box_link">news</a>
+                            </div>
+                        </div>
                     </div>
                     <div class="box_contact">
-                        <p></p>
-                    </div>
-                    <div class="box_right">
-
+                        <div>
+                            <p class="contakt_box_text">contakt us</p>
+                        </div>
+                        <div class="contakt_all">
+                            <div>
+                                <address>
+                                    213 Baker StreetOriel City Kounty7000 KNW,Kountry Name
+                                </address>
+                            </div>
+                            <div>
+                                <a href="tel:+23 994 233 4022">
+                                    +23 994 233 4022
+                                </a>
+                            </div>
+                                <a href="mailto:info@konstruct.com">
+                                    info@konstruct.com
+                                </a>
+                            </div>
+                        </div>
+                        <div class="box_right">
+                            <a href="http://#" target="_blank" rel="noopener noreferrer">
+                                <img src="./img/Bitmap(0).png" alt="">
+                            </a>
+                            <a href="http://#" target="_blank" rel="noopener noreferrer">
+                                <img src="./img/Bitmap(1).png" alt="">
+                            </a>
+                            <a href="http://#" target="_blank" rel="noopener noreferrer">
+                                <img src="./img/Bitmap(2).png" alt="">
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="hz">
